# pdf2md

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.moai/config/sections/: project.yaml  user.yaml
.moai/project/: product.md  structure.md  tech.md
.moai/specs/SPEC-PDF2MD-001/: acceptance.md  plan.md  spec.md
src/pdf2md/: __init__.py  cli.py  converter.py
src/pdf2md/extractors/: __init__.py  structure.py  text.py
src/pdf2md/formatters/: __init__.py  markdown.py
src/pdf2md/utils/: __init__.py  validation.py
tests/: __init__.py  conftest.py  test_cli.py  test_converter.py
tests/test_extractors/: __init__.py  test_structure.py  test_text.py
tests/test_formatters/: __init__.py  test_markdown.py
tests/test_utils/: test_validation.py
